--- a/exercise2/css/style.css
+++ b/exercise2/css/style.css
@@ -1,8 +1,8 @@
 
 body{
-  width: 600px;
-
-  margin: 30px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 40px;
   font-size: 20px;
   font: 'courier';
 }
