Ex2: added the variables to track how many secrets were found

--- a/exercise2/css/style.css
+++ b/exercise2/css/style.css
@@ -18,6 +18,10 @@ background-color: transparent;
 color: red;
 }
 
-.found{
+.foundSecrets{
   background-color: yellow;
+}
+
+.secret{
+  color: black;
 }
