--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -1,3 +1,14 @@
 body {
+background-color: pink;
 
+}
+
+.room{
+background-color: white;
+width: 800px;
+height: 700px;
+margin: auto;
+margin-top: 40px;
+box-shadow: 4px 4px solid grey;
+border-style: inset;
 }
