--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -10,18 +10,28 @@ body {
 
 main{
     background-color: white;
-    width: 1000px;
-    height: 700px;
+    width: 1200px;
+    height: 600px;
     margin: auto;
     margin-top: 50px;
     display: flex;
+    justify-content: space-around;
+    padding-top: 75px;
 }
 
 .faucet{
-
+width: 300px;
+height: 200px;
 }
 
 .mouth{
+  background-color: pink;
   width:100px;
   height:100px;
+
+}
+
+.toothbrush{
+  width: 20%;
+  height: 50%;
 }
