--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -1,5 +1,6 @@
 body {
    background-color: #aaa;
+   /* background:url("projet1/assets/images/background.jpeg"); */
    margin: 0;
    padding: 0;
    overflow: hidden;
