--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -37,7 +37,7 @@ height: 200px;
   border-radius: 15px;
 }
 
-.teeth{
+#teeth1, #teeth2, #teeth3 , #teeth4 ,#teeth5, #teeth6, #teeth7,#teeth8 {
 background-color: white;
 width: 144px;
 height: 130px
