P1: added a SFX and fixed the dialog box

--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -44,6 +44,11 @@ height: 130px
 
 }
 
+.introDialog{
+  /* background: #EBCCCC;
+  font-family: Verdana,Arial,sans-serif; */
+}
+
 .toothbrush{
   width: 20%;
   height: 50%;
