P1 Fixed some coding issues with Pippin
-fixed the yelloying of the tooth
-fixed the background not displaying

--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -1,6 +1,5 @@
 body {
-   background-color: #aaa;
-   /* background-image: : url("/images/img.jpeg"); */
+   background: url("../assets/images/background.jpeg");
    margin: 0;
    padding: 0;
    overflow: hidden;
