--- a/projet1/css/style.css
+++ b/projet1/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 main{
-    background-color: white;
+    background-color: #FEFFF9;
     border-style: inset;
     border: 10px 10px grey;
     border-radius: 10px;
@@ -20,6 +20,7 @@ main{
     margin: auto;
     margin-top: 50px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding-top: 75px;
     font-size: 2em;
@@ -32,6 +33,7 @@ height: 300px;
 
 .mouth{
   background-color: pink;
+  box-shadow: 2px grey;
   width:600px;
   height:350px;
   display: flex;
@@ -50,8 +52,11 @@ height: 130px
 }
 
 .introDialog{
-  /* background: #EBCCCC;
-  font-family: Verdana,Arial,sans-serif; */
+
+}
+
+.laurel{
+  width:60px;
 }
 
 .toothbrush{
@@ -60,13 +65,19 @@ height: 130px
 }
 
 .textDiv{
-  background-color: blue;
   text-align: center;
-  padding-top: 50px;
   height: 100px;
-  width: 300px;
-  top: 500px;
-  left: 300px;
-  position: fixed;
-  /* right: : 150px; */
+  width: 400px;
+  font-family: 'Cinzel', serif;
+  font-weight: bold;
+  font-size: 2.2rem;
+  text-align: center;
+}
+
+.textDiv2{
+  font-size: 1.5rem;
+  font-family: 'Cinzel', serif;
+  padding-top: 25px;
+  padding-left: 10px;
+  text-align: center;
 }
