--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -1,12 +1,12 @@
 body {
-background-color: yellow;
+background-color: '#C0C0C0';
 }
 
 
 main{
-  background-color: white;
-  width:900px;
-  height: 500px;
+  background-color: #66B2FF;
+  width:1200px;
+  height: 600px;
   margin:auto;
   margin-top: 100px;
 }
