--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -21,21 +21,41 @@ main{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+
 }
 
 .left{
-  background-color: yellow;
-  width: 250px;
-  height: 250px;
+  padding-top: 50px;
+  background-color: white;
+  width: 300px;
+  height: 30px;
 
 }
 
 .right{
-  background-color: yellow;
-  width: 250px;
-  height: 250px;
+  padding-top: 50px;
+  background-color: white;
+  width: 300px;
+  height: 300px;
 }
 
+#progress {
+  width: 100%;
+  background-color: #ddd;
+
+}
+
+
+#bar {
+  /* width: 50%;
+  height: 30px; */
+background-color: green;
+
+margin-left: 50px;
+margin-right: 50px;
+
+
+}
 
 /*
 h1, p {
