--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -1,66 +1,3 @@
-body {
-background-color: '#C0C0C0';
+body{
+  background-color: yellow;
 }
-
-
-main{
-  background-color: #66B2FF;
-  width:1200px;
-  height: 700px;
-  margin:auto;
-  margin-top: 100px;
-  text-align: center;
-}
-
-.choicesBox{
-  margin:auto;
-  padding-top: 150px;
-  background-color: white;
-  width: 800px;
-  height: 400px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
-}
-
-.left{
-  padding-top: 50px;
-  background-color: white;
-  width: 300px;
-  height: 30px;
-
-}
-
-.right{
-  padding-top: 50px;
-  background-color: white;
-  width: 300px;
-  height: 300px;
-}
-
-#progress {
-  width: 100%;
-  background-color: #ddd;
-
-}
-
-
-#bar {
-  /* width: 50%;
-  height: 30px; */
-background-color: green;
-
-margin-left: 50px;
-margin-right: 50px;
-
-
-}
-
-/*
-h1, p {
-	font-family: sans-serif;
-	text-align: center;
-	color: #323330;
-	font-size:  100px;
-} */
